--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,8 @@ pytz==2025.2
 pywin32==310
 pyzmq==26.4.0
 requests==2.32.3
+scikit-learn==1.6.1
+seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
 tornado==6.4.2
